<resources>
    <string name="app_name">Moyo H2O</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="slogan">The form is mechanic when on any given material we impress a predetermined form.</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="driver_name">Deliverers Name</string>
    <string name="driver_phone_number">Deliverers Phone Number</string>
    <string name="driver_car_name">Deliverers Name</string>
    <string name="details">Details</string>
    <string name="logout">Logout</string>
    <string name="call_a_watertank">Call Water Truck</string>
    <string name="next">next</string>
    <string name="welcome">Welcome</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="customer_name">Customer Name</string>
    <string name="customer">Customer</string>
    <string name="customerv_phone_number">Customerv Phone Number</string>
    <string name="userameneeded">You\'re required to fill your Username</string>
    <string name="enteruserameneeded">Please Kindly Enter Your Username</string>
    <string name="emailrequired">You\'re required to fill your Email Address</string>
    <string name="enteremailaddress">Please Kindly Enter Your Email Address</string>
    <string name="enterphonenumber">You\'re required to fill your Phone Number</string>
    <string name="enterphonenumberkindly">Please Kindly Enter Your Phone Number</string>
    <string name="enter10digitsphonenumber">You\'re required to Enter a 10 Digit Phone Number</string>
    <string name="enter10digitnumbers">Please Kindly Enter a 10 Digit Phone Number</string>
    <string name="confirmpassword">You\'re required to Have a Password That You\'ll confirm next</string>
    <string name="kindlyenterpassword">Please Kindly Enter Your Password</string>
    <string name="eightcharacterlong">You\'re required a Password 8 Character long</string>
    <string name="eightcharacterlongkindly">Please Kindly Enter An 8 Character Long Password</string>
    <string name="confirmpassword2">You\'re required to Confirm Your Password</string>
    <string name="kindlyconfirm">Please Kindly Confirm your Password</string>
    <string name="matchingpasswordsneeded">You\'re required to Have Matching Passwords</string>
    <string name="matchingpassword2">Please Kindly Enter Your Matching Passwords</string>
    <string name="thanks">Thank you</string>
    <string name="clients">Clients</string>
    <string name="deliverers">Deliverers</string>
    <string name="users">Users</string>
    <string name="roles_deliverer">Deliverer</string>
    <string name="roles_client">Client</string>
    <string name="radiobtnusertype">Choose User Type</string>
    <string name="firstwalkthroughdescription">You can simply search us our location on google maps</string>
    <string name="secondwalkthroughdescription">Our straightforward goal is to bring the best drinking water suppliers nearby your place.</string>
    <string name="thirdwalkthroughdescription">\" Place your order and Get pure and hygienic water deliveries directly to your doorstep through our online water delivery app\"</string>
    <string name="firsttitle">\"Moyo Water \"</string>
    <string name="secondwalkthroughtitle">Quenching your need for h20</string>
    <string name="thirdwalkthroughtitle">Moyo App Got You Covered</string>
    <string name="sign_up">Sign Up</string>
    <string name="register_to_create_an_account">Register to create an account</string>
    <string name="company_logo">company logo</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="login">Login</string>
    <string name="makeorder">Call for a Water Truck</string>
    <string name="waitingmessage">Kindly Wait as We get you a Water Truck...</string>
    <string name="Users_node_in_raltimedb">Users</string>
    <string name="deliverers_under_Users_node_in_raltimedb">Deliverers</string>
    <string name="sign_in">Sign In</string>
    <string name="login_to_continue_your_account">Login to continue your account</string>

    <string name="dont_have_an_account">Don\'t have an Account?</string>
    <string name="register">Register</string>
    <string name="user_name">Username</string>
    <string name="profile">Profile</string>
    <string name="take_picture_of_the_condition">attach a picture</string>
    <string name="your_name">Name</string>
    <string name="your_situation_details">Litres You may Need</string>
    <string name="author">Moyo App</string>
    <string name="cancel">cancel</string>


</resources>