<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <Button
        android:id="@+id/settings_driver_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="25dp"
        android:background="@drawable/button_gradient"
        android:fontFamily="@font/caviardreams"
        android:gravity="center_vertical|center_horizontal"
        android:drawable="@drawable/back"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="15sp"
        android:textAlignment="viewStart"
        android:text="@string/logout"
        android:textStyle="bold"
        android:drawableLeft="@drawable/back"
        tools:ignore="RtlCompat"
        android:drawableStart="@drawable/back"/>

    <Button
        android:id="@+id/logout_driv_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_gradient"
        android:fontFamily="@font/caviardreams"
        android:text="@string/details"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:id="@+id/rel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:background="@drawable/backgradient2"
        android:visibility="gone"
        android:elevation="5dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image_customer"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:padding="2dp"
            android:src="@drawable/profile"
            app:civ_border_color="#c880ff"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/name_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/profile_image_customer"
            android:text="@string/customer_name"
            android:textColor="@android:color/white"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_toEndOf="@+id/profile_image_customer" />

        <TextView
            android:id="@+id/phone_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_customer"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="3dp"
            android:layout_toRightOf="@+id/profile_image_customer"
            android:text="@string/customerv_phone_number"
            android:textColor="@android:color/white"
            android:textSize="14dp"
            android:textStyle="bold"
            android:layout_toEndOf="@+id/profile_image_customer" />


        <Button
            android:id="@+id/callingbtn"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/customer"
            android:src="@drawable/phone"
            app:tint="@android:color/black" />

    </RelativeLayout>



</RelativeLayout>