<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".FragDests.Maps.Home_map"
    tools:openDrawer="start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_main" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <RelativeLayout
            android:id="@+id/rel1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/request_button"
            android:layout_margin="10dp"
            android:visibility="gone">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image_driver"
                android:layout_width="90dp"
                android:layout_height="90dp"

                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:padding="3dp"
                android:src="@drawable/profile"
                app:civ_border_color="#c880ff"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/name_driver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@+id/profile_image_driver"
                android:layout_toRightOf="@+id/profile_image_driver"
                android:text="@string/driver_name"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phone_driver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_driver"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:layout_toEndOf="@+id/profile_image_driver"
                android:layout_toRightOf="@+id/profile_image_driver"
                android:text="@string/driver_phone_number"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/deliverername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone_driver"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:layout_toEndOf="@+id/profile_image_driver"
                android:layout_toRightOf="@+id/profile_image_driver"
                android:text="@string/driver_car_name"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/callingbtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/phone"
                app:tint="@android:color/black" />

        </RelativeLayout>


        <ZoomControls
            android:id="@+id/simpleZoomControl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/request_button"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/request_button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_gradient"
            android:fontFamily="@font/caviardreams"
            android:gravity="center"
            android:text="@string/call_a_watertank"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="23sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/accountbtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="25dp"
            android:background="@android:color/transparent"
            android:gravity="center_vertical|center_horizontal"
            android:src="@drawable/accounticon"
            tools:ignore="RtlCompat" />

        <ImageButton
            android:id="@+id/details"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="25dp"
            android:background="@android:color/transparent"
            android:src="@drawable/setting_icon"
            android:visibility="visible" />


    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:clipToPadding="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_blue_600">

            <RelativeLayout
                android:id="@+id/rellay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/grad"
                android:paddingBottom="20dp">

                <RelativeLayout
                    android:id="@+id/imgUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/circle_border">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginStart="9dp"
                        android:layout_marginLeft="9dp"
                        android:layout_marginTop="9dp"
                        android:layout_marginEnd="9dp"
                        android:layout_marginRight="9dp"
                        android:layout_marginBottom="9dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/circle"
                        android:padding="3dp"
                        android:scaleType="centerInside"
                        android:src="@mipmap/moyoappicon_foreground" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imgUser"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15sp"
                    android:fontFamily="sans-serif-light"
                    android:text="Juma"
                    android:textColor="@color/white"
                    android:textSize="32sp" />


                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_name"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="sans-serif"
                    android:text="Creator Juba,S.Sudan"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/close" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rellay1"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="42dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="40dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Email"
                        android:textColor="@color/white"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/useremail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="juma@gmail.com"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="15dp"
                        android:background="@android:color/darker_gray" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Phone"
                        android:textColor="@color/white"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/userphone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="+1-202-555-0157"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="15dp"
                        android:background="@android:color/darker_gray" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Moyo H2O"
                        android:textColor="@color/white"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="Thank You using Moyo App"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="15dp"
                        android:background="@android:color/darker_gray" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/logout_c_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_margin="25dp"
                        android:background="@drawable/button_gradient"
                        android:drawable="@drawable/back"
                        android:drawableStart="@drawable/back"
                        android:drawableLeft="@drawable/back"
                        android:fontFamily="@font/caviardreams"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/logout"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
                        android:textColor="@android:color/background_light"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:ignore="RtlCompat" />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="15dp"
                        android:background="@android:color/darker_gray" />


                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>

    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>
